--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -3,22 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>create project!</h1>
-<p><a href="/">ホーム</a></p>
 <div class="container">
-    <form method="post" action="/dashboard/create-project">
-        <label for="project_name"><b>Project Name</b></label>
-        <input type="text" placeholder="Enter Project Name" name="project_name" required>
-        <br>
-
-        <label for="project_description"><b>Project Description</b></label>
-        <input type="text" placeholder="Enter Project Description" name="project_description" required>
-
-        <button type="submit">submit</button>
-    </form>
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    <div class="content">
+        <div class="section">
+            <h2>プロジェクト作成</h2>
+            <form method="post" action="/dashboard/create-project">
+                <label for="project_name"><b>Project Name</b></label>
+                <input type="text" placeholder="Enter Project Name" name="project_name" required>
+                <br>
+        
+                <label for="project_description"><b>Project Description</b></label>
+                <input type="text" placeholder="Enter Project Description" name="project_description" required>
+        
+                <button type="submit">submit</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
