--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,35 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-<h1>dashboard!</h1>
-<p><a href="/">ホーム</a> > <a href="/dashboard">dashboard</a> > </p>
-<p>ようこそ<%= userName%>さん!</p>
-<a href="/profile?uid=<%= userID%>">マイページ</a>
-<p>projects should appear</p>
-<table border="1">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% if(projects) { %>
-    <% projects.forEach(row => { %>
-        <tr>
-            <td><a href="/project?pid=<%= row.projectID %>"><%= row.name %></a></td>
-            <td><%= row.description %></td>
-        </tr>
-    <% }) %>
-    <% } %>
-    </tbody>
-</table>
-<br>
-<a href="/dashboard/create-project">create project</a>
 
-<a href="/task/tasks">view task list</a>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <img src="/images/hayabusa2.png" alt="icon">
+            <% if(userID) { %>
+                <ul>
+                    <a href="/"><li>ホーム</li></a>
+                    <a href="/dashboard"><li>ダッシュボード</li></a>
+                    <a href="/task/tasks"><li>タスク一覧</li></a>
+                    <a href=""><li>ファイル一覧</li></a>
+                    <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                    <a href="/login/logout"><li>ログアウト</li></a>
+                </ul>
+            <% }else { %>
+                <ul>
+                    <a href="/"><li>ホーム</li></a>
+                    <a href="/login"><li>ログイン</li></a>
+                    <a href="/login/create"><li>アカウント作成</li></a>
+                </ul>
+            <% } %>
+        </div>
+        <div class="content">
+            <div class="header">
+                <h1>ダッシュボード</h1>
+            </div>
+
+            <div class="breadcrumb">
+                <a href="/">ホーム</a>
+                <span>></span>
+                <span>ダッシュボード</span>
+                <br>
+                <p>ようこそ<%= userName%>さん!</p>
+            </div>
+
+            <div class="section">
+                <h2>プロジェクト一覧</h2>
+                <% if(projects && projects.length > 0) { %>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>プロジェクト名</th>
+                                <th>概要</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        <% projects.forEach(row => { %>
+                            <tr>
+                                <td><a href="/project?pid=<%= row.projectID %>"><%= row.name %></a></td>
+                                <td><%= row.description %></td>
+                                <td><form action="/project/delete-project" method="post"><input type="hidden" name="projectID" value="<%= row.projectID%>"><button type="submit">削除</button></form></td>
+                            </tr>
+                        <% }) %>
+                        </tbody>
+                    </table>
+                <% }else { %>
+                    <p>プロジェクトはまだありません</p>
+                <% } %>
+                <form action="dashboard/create-project" method="get"><button type="submit">プロジェクトを作成</button></form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
