--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -3,32 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>profile!</h1>
-<img id="icon-image" src="<%= iconData.publicUrl%>" alt="icon" height="200px" width="200px">
-<a href="/profile/upload-icon">アイコンを編集</a>
-<form action="/profile/edit-profile" method="post">
-<table border="1">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>mail Address</th>
-        <th>ID</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><input type="text" name="name" value="<%= userData[0].name%>"></td>
-            <td><%= userData[0].email%></td>
-            <td><%= userData[0].userID%><input type="hidden" name="userID" value="<%= userData[0].userID%>"></td>
-            <td><input type="submit"></td>
-        </tr>
-    </tbody>
-</table>
-</form>
+<div class="container">
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    
+    <div class="content">
+        <div class="section">
+            <h2>プロフィール</h2>
+            <img id="icon-image" src="<%= iconData.publicUrl%>" alt="icon">
+            <form action="/profile/upload-icon" method="get"><button type="submit">アイコンを編集</button></form>
+            <form action="/profile/edit-profile" method="post">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>mail Address</th>
+                        <th>ID</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><input type="text" name="name" value="<%= userData[0].name%>"></td>
+                            <td><%= userData[0].email%></td>
+                            <td><%= userData[0].userID%><input type="hidden" name="userID" value="<%= userData[0].userID%>"></td>
+                            <td><button type="submit">変更を保存</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
