--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -3,94 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>edit task!</h1>
 <div class="container">
-    <form method="post" action="/task/edit-task">
-        <label for="task_name"><b>Task Name</b></label>
-        <input type="text" value="<%= taskData[0].name %>" name="task_name" required>
-        <br>
-
-        <label for="task_description"><b>Task Description</b></label>
-        <input type="text" value="<%= taskData[0].description %>" name="task_description" required>
-        <br>
-
-        <label for="start_date"><b>Start Date</b></label>
-        <input type="date" value="<%= taskData[0].start %>" name="start_date" required>
-        <br>
-
-        <label for="due_date"><b>Due Date</b></label>
-        <input type="date" value="<%= taskData[0].due %>" name="due_date" required>
-        <br>
-
-        <label for="priority"><b>Priority</b></label>
-        <input type="text" value="<%= taskData[0].priority %>" name="priority" required>
-        <br>
-
-        <label for="risk"><b>Risk</b></label>
-        <input type="text" value="<%= taskData[0].risk %>" name="risk" required>
-        <br>
-
-        <label for="responsible"><b>Responsible</b></label>
-        <% if(users) { %>
-            <select name="responsible">
-                <% users.forEach( row => { %>
-                    <option value="<%= row.name%>" <%= row.name === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
-                <% }) %>
-            </select>
-        <% } else { %>
-            <input type="text" placeholder="Enter Responsible" name="responsible" required>
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
         <% } %>
-        <br>
-
-        <label for="accountable"><b>Accountable</b></label>
-        <%if(users) { %>
-            <select name="accountable">
-                <% users.forEach( row => { %>
-                    <option value="<%= row.name%>" <%= row.name === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
-                <% }) %>
-            </select>
-        <% } else { %>
-            <input type="text" placeholder="Enter Accountable" name="accountable" required>
-        <% } %>
-        <br>
-
-        <label for="consulted"><b>Consulted</b></label>
-        <% if(users) { %>
-            <select name="consulted">
-                <% users.forEach( row => { %>
-                    <option value="<%= row.name%>" <%= row.name === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
-                <% }) %>
-            </select>
-        <% } else { %>
-            <input type="text" placeholder="Enter Consulted" name="consulted" required>
-        <% } %>
-        <br>
-
-        <label for="informed"><b>Informed</b></label>
-        <% if(users) { %>
-            <select name="informed">
-                <% users.forEach( row => { %>
-                    <option value="<%= row.name%>" <%= row.name === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
-                <% }) %>
-            </select>
-        <% } else { %>
-            <input type="text" placeholder="Enter Informed" name="informed" required>
-        <% } %>
-        <br>
-
-        <label for="progress"><b>Progress</b></label>
-        <select name="progress">
-            <option value="-1" <%= taskData[0].completion === -1 ? 'selected' : ''%>>not started</option>
-            <option value="0" <%= taskData[0].completion === 0 ? 'selected' : ''%>>in progress</option>
-            <option value="1" <%= taskData[0].completion === 1 ? 'selected' : ''%>>finished</option>
-        </select>
-        <br>
-
-        <button type="submit">submit</button>
-    </form>
+    </div>
+    <div class="content">
+        <div class="section">
+            <h2>タスク編集</h2>
+            <form method="post" action="/task/edit-task">
+                <label for="task_name"><b>Task Name</b></label>
+                <input type="text" value="<%= taskData[0].name %>" name="task_name" required>
+                <br>
+        
+                <label for="task_description"><b>Task Description</b></label>
+                <input type="text" value="<%= taskData[0].description %>" name="task_description" required>
+                <br>
+        
+                <label for="start_date"><b>Start Date</b></label>
+                <input type="date" value="<%= taskData[0].start %>" name="start_date" required>
+                <br>
+        
+                <label for="due_date"><b>Due Date</b></label>
+                <input type="date" value="<%= taskData[0].due %>" name="due_date" required>
+                <br>
+        
+                <label for="priority"><b>Priority</b></label>
+                <input type="text" value="<%= taskData[0].priority %>" name="priority" required>
+                <br>
+        
+                <label for="risk"><b>Risk</b></label>
+                <input type="text" value="<%= taskData[0].risk %>" name="risk" required>
+                <br>
+        
+                <label for="responsible"><b>Responsible</b></label>
+                <% if(users) { %>
+                    <select name="responsible">
+                        <% users.forEach( row => { %>
+                            <option value="<%= row.name%>" <%= row.name === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                <% } else { %>
+                    <input type="text" placeholder="Enter Responsible" name="responsible" required>
+                <% } %>
+                <br>
+        
+                <label for="accountable"><b>Accountable</b></label>
+                <%if(users) { %>
+                    <select name="accountable">
+                        <% users.forEach( row => { %>
+                            <option value="<%= row.name%>" <%= row.name === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                <% } else { %>
+                    <input type="text" placeholder="Enter Accountable" name="accountable" required>
+                <% } %>
+                <br>
+        
+                <label for="consulted"><b>Consulted</b></label>
+                <% if(users) { %>
+                    <select name="consulted">
+                        <% users.forEach( row => { %>
+                            <option value="<%= row.name%>" <%= row.name === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                <% } else { %>
+                    <input type="text" placeholder="Enter Consulted" name="consulted" required>
+                <% } %>
+                <br>
+        
+                <label for="informed"><b>Informed</b></label>
+                <% if(users) { %>
+                    <select name="informed">
+                        <% users.forEach( row => { %>
+                            <option value="<%= row.name%>" <%= row.name === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                <% } else { %>
+                    <input type="text" placeholder="Enter Informed" name="informed" required>
+                <% } %>
+                <br>
+        
+                <label for="progress"><b>Progress</b></label>
+                <select name="progress">
+                    <option value="-1" <%= taskData[0].completion === -1 ? 'selected' : ''%>>not started</option>
+                    <option value="0" <%= taskData[0].completion === 0 ? 'selected' : ''%>>in progress</option>
+                    <option value="1" <%= taskData[0].completion === 1 ? 'selected' : ''%>>finished</option>
+                </select>
+                <br>
+        
+                <button type="submit">submit</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
