--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>Hello!!</h1>
-<p>this is index</p>
-<a href="/login">login</a>
+<div class="container">
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    <div class="content">
+        <div class="header">
+            <h1>タスク管理ソフト</h1>
+        </div>
+
+        <div class="section">
+            <h2>概要</h2>
+            <p>このタスク管理ソフトはタスク管理ソフトです。なんか、うまく使ってください。結構頑張って作ったんで、、</p>
+            <form action="/login" method="get"><button type="submit">ログイン</button></form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
