--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>login page!</h1>
-<p><a href="/">ホーム</a></p>
 <div class="container">
-    <form method="post" action="/login">
-        <label for="mail"><b>Mail Address</b></label>
-        <input type="text" placeholder="Enter Username" name="mail" required>
-        <br>
-
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
-
-        <button type="submit">Login</button>
-    </form>
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    <div class="content">
+        <div class="section">
+            <h2>ログイン</h2>
+            <form method="post" action="/login">
+                <label for="mail"><b>Mail Address</b></label>
+                <input type="text" placeholder="Enter Username" name="mail" required>
+                <br>
+        
+                <label for="password"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="password" required>
+        
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 </div>
-<a href="/login/create">create account</a>
 </body>
 </html>
