--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,28 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>profile!</h1>
-<p><a href="/">ホーム</a></p>
-<img id="icon-image" src="<%= iconData.publicUrl%>" alt="icon" height="200px" width="200px">
-<table border="1">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>mail Address</th>
-        <th>ID</th>
-    </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><%= userData[0].name%></td>
-            <td><%= userData[0].email%></td>
-            <td><%= userData[0].userID %></td>
-        </tr>
-    </tbody>
-</table>
+<div class="container">
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    
+    <div class="content">
+        <div class="section">
+            <h2>プロフィール</h2>
+            <img id="icon-image" src="<%= iconData.publicUrl%>" alt="icon">
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>mail Address</th>
+                    <th>ID</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><%= userData[0].name%></td>
+                        <td><%= userData[0].email%></td>
+                        <td><%= userData[0].userID %></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
