--- a/views/upload_icon.ejs
+++ b/views/upload_icon.ejs
@@ -3,16 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<h1>upload icon!</h1>
-<p><a href="/">ホーム</a></p>
 <div class="container">
-    <form method="post" enctype="multipart/form-data" action="/profile/upload-icon">
-        <input type="file" name="avatar" accept="image/*" required>
-        <button type="submit">Upload</button>
-    </form>
+    <div class="sidebar">
+        <img src="/images/hayabusa2.png" alt="icon">
+        <% if(userID) { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/task/tasks"><li>タスク一覧</li></a>
+                <a href=""><li>ファイル一覧</li></a>
+                <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
+                <a href="/login/logout"><li>ログアウト</li></a>
+            </ul>
+        <% }else { %>
+            <ul>
+                <a href="/"><li>ホーム</li></a>
+                <a href="/login"><li>ログイン</li></a>
+                <a href="/login/create"><li>アカウント作成</li></a>
+            </ul>
+        <% } %>
+    </div>
+    
+    <div class="content">
+        <div class="section">
+            <h2>アイコンアップロード</h2>
+            <form method="post" enctype="multipart/form-data" action="/profile/upload-icon">
+                <input type="file" name="avatar" accept="image/*" required>
+                <button type="submit">Upload</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
