--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -54,54 +54,58 @@
                 <label for="risk"><b>Risk</b></label>
                 <input type="text" placeholder="Enter Risk" name="risk" required>
                 <br>
-        
-                <label for="responsible"><b>Responsible</b></label>
-                <% if(users) { %>
-                <select name="responsible">
-                    <% users.forEach( row => { %>
-                    <option value="<%= row.name%>"><%= row.name %></option>
-                    <% }) %>
-                </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Responsible" name="responsible" required>
-                <% } %>
-                <br>
-        
-                <label for="accountable"><b>Accountable</b></label>
-                <%if(users) { %>
-                <select name="accountable">
-                    <% users.forEach( row => { %>
-                    <option value="<%= row.name%>"><%= row.name %></option>
-                    <% }) %>
-                </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Accountable" name="accountable" required>
-                <% } %>
-                <br>
-        
-                <label for="consulted"><b>Consulted</b></label>
-                <% if(users) { %>
-                <select name="consulted">
-                    <% users.forEach( row => { %>
-                    <option value="<%= row.name%>"><%= row.name %></option>
-                    <% }) %>
-                </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Consulted" name="consulted" required>
-                <% } %>
-                <br>
-        
-                <label for="informed"><b>Informed</b></label>
-                <% if(users) { %>
-                <select name="informed">
-                    <% users.forEach( row => { %>
-                    <option value="<%= row.name%>"><%= row.name %></option>
-                    <% }) %>
-                </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Informed" name="informed" required>
-                <% } %>
-                <br>
+
+                <div class="selector">
+                    <label for="responsible"><b>Responsible</b></label>
+                    <% if(users) { %>
+                    <select name="responsible">
+                        <% users.forEach( row => { %>
+                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Responsible" name="responsible" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="accountable"><b>Accountable</b></label>
+                    <%if(users) { %>
+                    <select name="accountable">
+                        <% users.forEach( row => { %>
+                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Accountable" name="accountable" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="consulted"><b>Consulted</b></label>
+                    <% if(users) { %>
+                    <select name="consulted">
+                        <% users.forEach( row => { %>
+                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Consulted" name="consulted" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="informed"><b>Informed</b></label>
+                    <% if(users) { %>
+                    <select name="informed">
+                        <% users.forEach( row => { %>
+                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <% }) %>
+                    </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Informed" name="informed" required>
+                    <% } %>
+                </div>
         
                 <button type="submit">submit</button>
             </form>
